--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt' //databinding
     id 'kotlin-parcelize' //databinding
+    id 'androidx.navigation.safeargs.kotlin'
 
 }
 
@@ -46,6 +47,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -57,18 +59,31 @@ dependencies {
     //2.4.0需要目標版本31
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
-//    Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
 
     def retrofit2_version = "2.9.0"
     def room_version = "2.3.0"
     def glide_version = "4.12.0"
     def rxjava3_version = "3.0.0"
+    def nav_version = "2.3.5"
+
+
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
 //    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
     implementation "com.squareup.retrofit2:adapter-rxjava3:$retrofit2_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit2_version"
+    implementation ("com.squareup.retrofit2:converter-simplexml:$retrofit2_version"){
+        exclude group: 'xpp3', module: 'xpp3'
+        exclude group: 'stax', module: 'stax-api'
+        exclude group: 'stax', module: 'stax'
+    }
+
 
     implementation "io.reactivex.rxjava3:rxandroid:$rxjava3_version"
     implementation "io.reactivex.rxjava3:rxjava:$rxjava3_version"
