--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.jwisdom.mykotlin"
+        applicationId "com.example.test"
         minSdk 26
         targetSdk 31
         versionCode 1
@@ -56,18 +56,20 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2")
 
-    //2.4.0需要目標版本31
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
-
 
     def retrofit2_version = "2.9.0"
-    def room_version = "2.3.0"
+    def lifecycle_version = "2.4.0"
     def glide_version = "4.12.0"
     def rxjava3_version = "3.0.0"
     def nav_version = "2.3.5"
+    def datastore_version = "1.0.0"
 
+    // Preferences DataStore
+    implementation "androidx.datastore:datastore-preferences:$datastore_version"
 
+    //2.4.0需要目標版本31
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
 
     // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
@@ -89,5 +91,6 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxjava:$rxjava3_version"
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+
 }
