--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'kotlin-kapt' //databinding
     id 'kotlin-parcelize' //databinding
     id 'androidx.navigation.safeargs.kotlin'
-
+    id 'com.google.secrets_gradle_plugin' version '0.6.1'
 }
 
 android {
